--- a/src/app/styles/sections/RightSection.module.css
+++ b/src/app/styles/sections/RightSection.module.css
@@ -3,7 +3,6 @@
   display: flex;
   flex-direction: column;
   gap: 15px;
-  max-width: 65vw;
 }
 
 .content {
