--- a/src/app/styles/sections/Section.module.css
+++ b/src/app/styles/sections/Section.module.css
@@ -3,6 +3,7 @@
   background-color: var(--background);
   padding: 20px;
   box-shadow: 5px 5px 4px rgba(0, 0, 0, 0.25);
+  overflow: hidden;
 }
 
 .corners div {
