--- a/src/app/styles/tabs/Questlog.module.css
+++ b/src/app/styles/tabs/Questlog.module.css
@@ -1,5 +1,6 @@
 .container {
   display: flex;
   flex-direction: column;
-  gap: 15px;
+  gap: 7px;
+  justify-content: space-evenly;
 }
