--- a/src/app/styles/util/QuestCard.module.css
+++ b/src/app/styles/util/QuestCard.module.css
@@ -4,7 +4,7 @@
   background-color: var(--bright-background);
   border-radius: 10px;
   height: 90px;
-  padding: 15px;
+  padding: 5px;
   position: relative;
   z-index: 2;
   cursor: pointer;
@@ -42,6 +42,7 @@
   position: relative;
   flex: 1;
   height: 25px;
+  margin-top: 10px;
 }
 
 .arrowColumn * {
